--- a/client/app/views/main.html
+++ b/client/app/views/main.html
@@ -1,23 +1,29 @@
-<div class="jumbotron">
-  <h1>'Allo, 'Allo!</h1>
-  <p class="lead">
-    <img src="images/yeoman.png" alt="I'm Yeoman"><br>
-    Always a pleasure scaffolding your apps.
-  </p>
-  <p><a class="btn btn-lg btn-success" ng-href="#/">Splendid!<span class="glyphicon glyphicon-ok"></span></a></p>
-</div>
-
-<div class="row marketing">
-  <h4>HTML5 Boilerplate</h4>
-  <p>
-    HTML5 Boilerplate is a professional front-end template for building fast, robust, and adaptable web apps or sites.
-  </p>
-
-  <h4>Angular</h4>
-  <p>
-    AngularJS is a toolset for building the framework most suited to your application development.
-  </p>
-
-  <h4>Karma</h4>
-  <p>Spectacular Test Runner for JavaScript.</p>
+<div class="container">
+    <div class="well">
+        <form>
+            <div class="form-group">
+                <label>First Name</label>
+                <input class="form-control" type="text" />
+            </div>
+            <div class="form-group">
+                <label>Last Name</label>
+                <input class="form-control" type="text" />
+            </div>
+            <div class="form-group">
+                <label>Email ID</label>
+                <input class="form-control" type="text" />
+            </div>
+            <div class="form-group">
+                <label>Mobile Number</label>
+                <input class="form-control" type="text" />
+            </div>
+            <div class="form-group">
+                <label>Password</label>
+                <input class="form-control" type="text" />
+            </div>
+            <div class="form-group">                
+                <input class="btn btn-primary" type="submit" value="Submit" />
+            </div>
+        </form>
+    </div>    
 </div>
